variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbPas:int=0
          ^Variables:4: error: not found: value nbpPas
  nbpPas=nbPas+1
  ^