variables.Variables.scala.code
var nbPas:int=0

while (estSurBiscuit()==true) {
  nbpPas=nbPas+1
  avance()
}